alteração no footer.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
                 </ul> 
             </nav>
             <div class="nomes">
-                <p>Ítalo Felipe</p>
-                <p>Fernanda Corrêa</p>
-                <p>João Pedro Belo</p>
+                <p>Aluno: Ítalo Felipe Almeida Massulo</p>
+                <p>Instrutores: Fernanda Corrêa e João Pedro Belo</p>
                 <p>Layout criado para fins de estudos na escola vai na web</p>
             </div>
             <div class="laço">
