Retirada das divs

--- a/index.html
+++ b/index.html
@@ -38,21 +38,17 @@
     </main>
     <footer>
         <section>
-            <nav class="logos">
                 <ul>
-                    <li><a href=""><img src="imgs/footer/footer icon 1.png" alt="logo linkedin"></a></li>
-                    <li><a href=""><img src="imgs/footer/footer icon 2.png" alt="logo instagram"></a></li>
+                    <li><a href="https://www.linkedin.com/company/vainaweb/posts/" target="_blank"><img src="imgs/footer/footer icon 1.png" alt="logo linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/vainaweb/" target="_blank"><img src="imgs/footer/footer icon 2.png" alt="logo instagram"></a></li>
                     <li><a href="https://github.com/ItaloMassulo" target="_blank"><img src="imgs/footer/footer icon 3.png" alt="logo github"></a></li>
                 </ul> 
-            </nav>
-            <div class="nomes">
-                <p>Aluno: Ítalo Felipe Almeida Massulo</p>
-                <p>Instrutores: Fernanda Corrêa e João Pedro Belo</p>
-                <p>Layout criado para fins de estudos na escola vai na web</p>
-            </div>
-            <div class="laço">
+                <li>
+                    <p>Aluno: Ítalo Felipe Almeida Massulo</p>
+                    <p>Instrutores: Fernanda Corrêa e João Pedro Belo</p>
+                    <p>Layout criado para fins de estudos na escola vai na web</p>
+                    </li>
                 <img src="imgs/footer/logo footer.png" alt="Logo de um laço cor-de-rosa">
-            </div>
         </section>
     </footer>
 </body>
